# project-1

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  OBS-CodeBuilders-Project-Report.html  index.html  package-lock.json  package.json  tailwind.config.ts  tokens.json  vite.config.ts
figma-plugin/: code.js  manifest.json  ui.html
figma-plugin/src/: helpers.js
figma-plugin/src/components/: appFrames.js  buttons.js  inputs.js  menus.js  modals.js  panels.js
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/commands/: app_commands.rs  audio_commands.rs  audio_device_commands.rs  collection_commands.rs  mod.rs  output_commands.rs  plugin_commands.rs  preview_commands.rs  scene_commands.rs  screenshot_commands.rs  source_commands.rs  stats_commands.rs  updater_commands.rs
src-tauri/src/db/: collection_repo.rs  mod.rs  plugin_repo.rs  scene_repo.rs  source_repo.rs
src-tauri/src/output/: mod.rs
src-tauri/src/state/: mod.rs
src/components/layout/: AppShell.tsx  (+4 more)
src/config/: layoutConfig.ts
src/ipc/: index.ts
src/lib/: constants.ts  errors.ts  tokens.ts  utils.ts
src/stores/: audioStore.ts  captureStore.ts  collectionStore.ts  filterStore.ts  hotkeyStore.ts  index.ts  outputStore.ts  pluginStore.ts  profileStore.ts  sceneStore.ts  settingsStore.ts  sourceStore.ts  transitionStore.ts  uiStore.ts
src/types/: audio.ts  common.ts  hotkey.ts  index.ts  output.ts  plugin.ts  scene.ts  settings.ts  source.ts
(+16 files in other folders)
