[package]
name = "codebuilders"
version = "0.1.0"
edition = "2021"

[lib]
name = "codebuilders_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-fs       = "2"
tauri-plugin-os              = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"

serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid         = { version = "1",   features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
thiserror    = "1"
sqlx         = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
sysinfo      = "0.30"
screenshots  = "0.8"
image        = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
base64       = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
